# ml_bootcamp

./: .gitignore  README.md  classwork1.sql  pyproject.toml  surnames.txt
Homeworks/: homework10.ipynb  homework11.ipynb  homework12.ipynb  homework13.ipynb  homework14.ipynb  homework15.ipynb  homework17.ipynb  homework18.ipynb  homework19.ipynb  homework20.ipynb  homework21.ipynb  homework22.ipynb  homework7.ipynb  homework8.ipynb  homework9.ipynb
Homeworks/homework17.ipynb/: homework17.ipynb
Homeworks/homework6/: homework.ipynb  list.txt  math.txt  raw_data.txt  science.txt  settings.cfg  unique_visitors.txt
Homeworks/homework7/: homework7.ipynb
Homeworks/python_quiz/: quiz.ipynb
SQL/: classwork2.sql
current/: constants.py  full-names.txt  w1_d2.ipynb  w1d1.ipynb  w2_d2.ipynb  w3_d2.ipynb
current/classwork/: April7.ipynb  DistilBERT_vs_Robertta.ipynb  Feb14.ipynb  Feb17.ipynb  Feb21.ipynb  Feb24.ipynb  Feb3.ipynb  Feb7.ipynb  Jan30.ipynb  July2.ipynb  July4.ipynb  July_2.ipynb  June2.ipynb  June27.ipynb  Mar10.ipynb  Mar14.ipynb  Mar24.ipynb  Mar3.ipynb  May19.ipynb  May23.ipynb  May30.ipynb  OOP.ipynb  Question_Answering_with_a_Fine_Tuned_BERT.ipynb  Text_Preprocessing_in_NLP.ipynb  a-visual-notebook-to-using-bert-for-the-first-time.ipynb  april14.ipynb  fine_tune_bart_summarization_two_langs.ipynb  june9.ipynb  yolo.ipynb  (+1 more)
later/: M1_W1_01_Python_Basics.ipynb  M1_W1_02_Control_Flow.ipynb  M1_W2_01_Functions_Errors.ipynb  M1_W2_02_Files_Projects.ipynb  M1_W3_01_NumPy.ipynb  M1_W3_02_Pandas_Intro.ipynb  M1_W4_01_Pandas_Advanced.ipynb  M1_W4_02_Matplotlib.ipynb  M2_W1_01_Data_Loading.ipynb  M2_W1_02_Dirty_Data.ipynb  M2_W2_01_Transformations.ipynb  M2_W2_02_Merging_Joins.ipynb  M2_W3_01_Descriptive_Stats.ipynb  M2_W3_02_Visual_EDA.ipynb  M2_W4_01_Outliers.ipynb  M2_W4_02_Feature_Understanding.ipynb  homework3.py
materials/: The Architecture of Speed_ YOLO vs. Traditional CNNs
quiz1/: inventory.txt  quiz.ipynb
quizzes/: exam.ipynb
(+110 files in other folders)
