[project]
name = "ml-bootcamp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "accelerate>=1.14.0",
    "beautifulsoup4>=4.15.0",
    "catboost>=1.2.10",
    "datasets>=5.0.0",
    "importlib-resources>=7.1.0",
    "kagglehub>=1.0.1",
    "lap>=0.5.13",
    "lightgbm>=4.6.0",
    "matplotlib>=3.10.9",
    "nltk>=3.9.4",
    "numpy>=2.4.5",
    "onnx>=1.21.0",
    "pandas>=3.0.3",
    "roboflow>=1.3.9",
    "scikit-learn>=1.8.0",
    "seaborn>=0.13.2",
    "tensorflow>=2.21.0",
    "tensorflow-datasets>=4.9.10",
    "torch>=2.12.0",
    "torchvision>=0.27.0",
    "transformers>=5.12.1",
    "ultralytics>=8.4.62",
    "wordcloud>=1.9.6",
    "xgboost>=3.3.0",
]
